to #33881517 initial commit for ha cdh

--- a/group_vars/cdh_servers.yml
+++ b/group_vars/cdh_servers.yml
@@ -17,14 +17,14 @@ cdh_services:
 
   - type: hive
 
-  - type: hue
+#  - type: hue
 
-  - type: impala
-    scratch_dirs: /tmp/impala
+#  - type: impala
+#    scratch_dirs: /tmp/impala
 
-  - type: oozie
+#  - type: oozie
 
-  - type: sentry
+#  - type: sentry
 
   - type: spark
 
