--- a/roles/mysql_connector/tasks/main.yml
+++ b/roles/mysql_connector/tasks/main.yml
@@ -16,13 +16,13 @@
     path: /usr/share/java/mysql-connector-java.jar
   register: mysql_connector_java
 
-- name: Download MySQL Connector/J 
-  get_url:
-    url: https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.48.zip
-    dest: "{{ tmp_dir }}/mysql-connector-java.zip"
-    checksum: "md5:5da24facd99964f296ecde32abcd2384"
-    mode: 0644
-  when: not mysql_connector_java.stat.exists
+#- name: Download MySQL Connector/J 
+#  get_url:
+#    url: https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.48.zip
+#    dest: "{{ tmp_dir }}/mysql-connector-java.zip"
+#    checksum: "md5:5da24facd99964f296ecde32abcd2384"
+#    mode: 0644
+#  when: not mysql_connector_java.stat.exists
 
 - name: Extract MySQL Connector/J zip file
   unarchive:
