--- a/group_vars/db_server.yml
+++ b/group_vars/db_server.yml
@@ -10,6 +10,7 @@ mysql_pid_file: "{{ mysql_pid_dir }}/mariadb.pid"
 mysql_innodb_log_buffer_size: 64M
 mysql_innodb_buffer_pool_size: 4G
 mysql_root_password: changeme
+#mysql_root_password: root 
 
 # Supported database types: mysql,postgresql,...
 database_type: mysql
@@ -44,11 +45,6 @@ databases:
     name: 'metastore'
     user: 'hive'
     pass: 'hive_password'
-    type: '{{ database_type }}'
-  sentry:
-    name: 'sentry'
-    user: 'sentry'
-    pass: 'sentry_password'
     type: '{{ database_type }}'
   hue:
     name: 'hue'
