--- a/site.yml
+++ b/site.yml
@@ -35,19 +35,19 @@
     - mysql
     - mysql_client
 
-- name: Install MIT KDC Server
-  hosts: krb5_server
-  roles:
-    - krb5/server
-  tags: krb5
+#- name: Install MIT KDC Server
+#  hosts: krb5_server
+#  roles:
+#    - krb5/server
+#  tags: krb5
 
-- name: Install MIT KDC Client
-  hosts: all
-  roles:
-    - { role: krb5/client, when: (krb5_kdc_type is defined) and (krb5_kdc_type != 'none') }
-  tags:
-    - krb5
-    - krb5_client
+#- name: Install MIT KDC Client
+#  hosts: all
+#  roles:
+#    - { role: krb5/client, when: (krb5_kdc_type is defined) and (krb5_kdc_type != 'none') }
+#  tags:
+#    - krb5
+#    - krb5_client
 
 - name: Configure EPEL Repository
   hosts: scm_server
